@@ -709,6 +709,21 @@ extern struct poptOption rpmDatabasePoptTable[];
 /*@{*/
 
 /** \ingroup rpmcli
+ * Import public key packet(s).
+ * @todo Implicit --update policy for gpg-pubkey headers.
+ * @param ts		transaction set
+ * @param pkt		pgp pubkey packet(s)
+ * @param pktlen	pgp pubkey length
+ * @return		RPMRC_OK/RPMRC_FAIL
+ */
+rpmRC rpmcliImportPubkey(const rpmts ts,
+		const unsigned char * pkt, ssize_t pktlen)
+	/*@globals RPMVERSION, rpmGlobalMacroContext, h_errno,
+		fileSystem, internalState @*/
+	/*@modifies ts, rpmGlobalMacroContext,
+		fileSystem, internalState @*/;
+
+/** \ingroup rpmcli
  * Bit(s) to control rpmReSign() operation.
  */
 /*@-typeuse@*/
