@@ -1,4 +1,5 @@
 5.0.0 -> 5.0.1:
+    - jbj: unbreak rpm-python, preserve existing symbol in released versions.
     - jbj: fix several typos noticed by the translation project.
     - proyvind: Rename rpmcliImportPubkey() -> rpmtsImportPubkey() (from and for a hint of rpm.org API compatibility;)
     - proyvind: expose more functions in rpmps API (as rpm.org, initially based on us ;p)
